[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://PromptMenu.gd" type="Script" id=2]
[ext_resource path="res://MenuItem.tscn" type="PackedScene" id=3]

[node name="PromptMenu" type="PanelContainer"]
margin_left = 144.0
margin_top = 140.0
margin_right = 234.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 20 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 6.0
margin_top = 11.0
margin_right = 84.0
margin_bottom = 20.0
text = "  1  "

[node name="Contents" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 84.0
margin_bottom = 27.0

[node name="Prefix" type="Label" parent="Contents"]
margin_right = 78.0
margin_bottom = 9.0
text = "Are you sure?"

[node name="ConfirmButtons" type="HBoxContainer" parent="Contents"]
margin_top = 13.0
margin_right = 78.0
margin_bottom = 22.0

[node name="YesOption" parent="Contents/ConfirmButtons" instance=ExtResource( 3 )]
editor/display_folded = true
margin_right = 30.0
margin_bottom = 9.0

[node name="CenterContainer" parent="Contents/ConfirmButtons/YesOption" index="0"]
margin_bottom = 9.0

[node name="Cursor" parent="Contents/ConfirmButtons/YesOption/CenterContainer" index="0"]
margin_top = 0.0
margin_bottom = 8.0

[node name="Label" parent="Contents/ConfirmButtons/YesOption" index="1"]
margin_top = 0.0
margin_right = 30.0
margin_bottom = 9.0
text = "Yes"

[node name="NoOption" parent="Contents/ConfirmButtons" instance=ExtResource( 3 )]
editor/display_folded = true
margin_left = 34.0
margin_right = 58.0
margin_bottom = 9.0

[node name="CenterContainer" parent="Contents/ConfirmButtons/NoOption" index="0"]
margin_bottom = 9.0

[node name="Cursor" parent="Contents/ConfirmButtons/NoOption/CenterContainer" index="0"]
margin_top = 0.0
margin_bottom = 8.0

[node name="Label" parent="Contents/ConfirmButtons/NoOption" index="1"]
margin_top = 0.0
margin_right = 24.0
margin_bottom = 9.0
text = "No"
[connection signal="mouse_entered_item" from="Contents/ConfirmButtons/YesOption" to="." method="_on_mouse_entered_item"]
[connection signal="selected" from="Contents/ConfirmButtons/YesOption" to="." method="_on_option_selected"]
[connection signal="mouse_entered_item" from="Contents/ConfirmButtons/NoOption" to="." method="_on_mouse_entered_item"]
[connection signal="selected" from="Contents/ConfirmButtons/NoOption" to="." method="_on_option_selected"]

[editable path="Contents/ConfirmButtons/YesOption"]

[editable path="Contents/ConfirmButtons/NoOption"]
